# PydanticAI

./: .gitignore  README.md  main.py  pyproject.toml
1_basic/: 1_openai_agent.py  2_multi_model_agents.py  2_ollama_agent.py  openai_error.py
2_logfire/: 1_hello_world.py
basic/: 1_agent_openai.py  example.py  openai_error.py
