[project]
name = "pydanticai"
version = "0.1.0"
description = "PydandicAI is a Python library that provides a set of tools for building AI applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=0.2.14",
]

[dependency-groups]
dev = [
    "pydantic-ai[logfire]>=0.2.14",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
